Moderisation to TabLayout and Toolbar along with other minor refactorings